get delete button working and also fix so that when there are 0 ssaved cards the footer is not showing up in the middle of the screen

--- a/src/components/SavedArticles/SavedArticles.css
+++ b/src/components/SavedArticles/SavedArticles.css
@@ -1,8 +1,15 @@
+.savedArticles {
+  display: flex;
+  flex-direction: column;
+  min-height: 75vh;
+}
+
 .savedArticles__container {
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  flex: 1;
 }
 
 .savedArticles__text-container {
